cmake_minimum_required(VERSION 2.6)
project(Tangential_complex_tests)

if (GCOVR_PATH)
  # for gcovr to make coverage reports - Corbera Jenkins plugin
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
endif()
if (GPROF_PATH)
  # for gprof to make coverage reports - Jenkins
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
endif()

if(CGAL_FOUND)
  if (NOT CGAL_VERSION VERSION_LESS 4.8.0)
    message(STATUS "CGAL version: ${CGAL_VERSION}.")

    find_package(Eigen3 3.1.0)
    if (EIGEN3_FOUND)
      message(STATUS "Eigen3 version: ${EIGEN3_VERSION}.")
      include( ${EIGEN3_USE_FILE} )
      include_directories (BEFORE "../../include")

      add_executable( Tangential_complex_test_TC test_tangential_complex.cpp )
      target_link_libraries(Tangential_complex_test_TC ${CGAL_LIBRARY} ${Boost_DATE_TIME_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
      if (TBB_FOUND)
        target_link_libraries(Tangential_complex_test_TC ${TBB_LIBRARIES})
      endif()
    else()
      message(WARNING "Eigen3 not found. Version 3.1.0 is required for the Tangential_complex tests.")
    endif()
  else()
    message(WARNING "CGAL version: ${CGAL_VERSION} is too old to compile Tangential_complex tests. Version 4.8.0 is required.")
  endif ()
else()
  message(WARNING "CGAL not found. It is required for the Tangential_complex tests.")
endif()