cmake_minimum_required(VERSION 2.6)
project(GUDHITopologicalInferenceWithCubicalComplexes)

#TODO :: Work on gudhi use cgal over here!!!

add_executable ( topological_inference_from_point_cloud_example topological_inference_from_point_cloud_example.cpp )
target_link_libraries(topological_inference_from_point_cloud_example ${Boost_SYSTEM_LIBRARY})

add_executable ( topological_inference_from_point_cloud_periodic_domain_example topological_inference_from_point_cloud_periodic_domain_example.cpp )
target_link_libraries(topological_inference_from_point_cloud_periodic_domain_example ${Boost_SYSTEM_LIBRARY})

add_executable ( topological_inference_from_function_example topological_inference_from_function_example.cpp )
target_link_libraries(topological_inference_from_function_example ${Boost_SYSTEM_LIBRARY})

add_executable ( topological_inference_from_function_periodic_domain_example topological_inference_from_function_periodic_domain_example.cpp )
target_link_libraries(topological_inference_from_function_periodic_domain_example ${Boost_SYSTEM_LIBRARY})

if (TBB_FOUND)
   target_link_libraries(topological_inference_from_point_cloud_example ${TBB_LIBRARIES})
   target_link_libraries(topological_inference_from_point_cloud_periodic_domain_example ${TBB_LIBRARIES})
   target_link_libraries(topological_inference_from_function_example ${TBB_LIBRARIES})
   target_link_libraries(topological_inference_from_function_periodic_domain_example ${TBB_LIBRARIES})
endif()

