cmake_minimum_required(VERSION 2.6)
project(Tower_to_filtration_examples)

#INCLUDE_DIRECTORIES(BEFORE /home/hannah/Desktop/collapses_filtration/gudhi_integration/sophia_integration/src/Tower_to_filtration/include)

add_executable(Tower_to_filtration_example_elementary_input_streamed_output example_elementary_input_streamed_output.cpp)
add_test(NAME Tower_to_filtration_example_elementary_input_streamed_output
    COMMAND $<TARGET_FILE:Tower_to_filtration_example_elementary_input_streamed_output>)
install(TARGETS Tower_to_filtration_example_elementary_input_streamed_output DESTINATION bin)

add_executable(Tower_to_filtration_example_elementary_input_write_filtration_into_file example_elementary_input_write_filtration_into_file.cpp)
add_test(NAME Tower_to_filtration_example_elementary_input_write_filtration_into_file
    COMMAND $<TARGET_FILE:Tower_to_filtration_example_elementary_input_write_filtration_into_file> "${CMAKE_CURRENT_BINARY_DIR}/tower_to_filtration_test_result.txt")
install(TARGETS Tower_to_filtration_example_elementary_input_write_filtration_into_file DESTINATION bin)

add_executable(Tower_to_filtration_example_tower_from_file_streamed_output example_tower_from_file_streamed_output.cpp)
add_test(NAME Tower_to_filtration_example_tower_from_file_streamed_output
    COMMAND $<TARGET_FILE:Tower_to_filtration_example_tower_from_file_streamed_output> "${CMAKE_SOURCE_DIR}/data/filtered_simplicial_complex/random_tower.txt")
install(TARGETS Tower_to_filtration_example_tower_from_file_streamed_output DESTINATION bin)

add_executable(Tower_to_filtration_example_tower_from_file_write_filtration_into_file example_tower_from_file_write_filtration_into_file.cpp)
add_test(NAME Tower_to_filtration_example_tower_from_file_write_filtration_into_file
    COMMAND $<TARGET_FILE:Tower_to_filtration_example_tower_from_file_write_filtration_into_file> "${CMAKE_SOURCE_DIR}/data/filtered_simplicial_complex/random_tower.txt" "${CMAKE_CURRENT_BINARY_DIR}/tower_to_filtration_test_result.txt")
install(TARGETS Tower_to_filtration_example_tower_from_file_write_filtration_into_file DESTINATION bin)


