cmake_minimum_required(VERSION 2.6)
SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++11 -frounding-math ")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
include_directories("../include/gudhi")
find_package(Eigen3 3.1.0)
  if (EIGEN3_FOUND)
    message(STATUS "Eigen3 version: ${EIGEN3_VERSION}.")
    include( ${EIGEN3_USE_FILE} )
    message(STATUS "Eigen3 use file: ${EIGEN3_USE_FILE}.")
    include_directories (BEFORE "../../include")
    add_executable ( simpletest simpletest.cpp )
    add_executable ( simpletest_alternate simpletest_alternate.cpp )
    target_link_libraries( simpletest ${GMP_LIBRARIES} ${CGAL_LIBRARY} ${Boost_SYSTEM_LIBRARY})
    target_link_libraries( simpletest_alternate ${GMP_LIBRARIES} ${CGAL_LIBRARY} ${Boost_SYSTEM_LIBRARY})
  else()
    message(WARNING "Eigen3 not found. Version 3.1.0 is required for witness_complex_sphere example.")      
  endif()

